--- a/Obligatorio.API/package.json
+++ b/Obligatorio.API/package.json
@@ -45,6 +45,7 @@
     "mime-db": "^1.52.0",
     "mime-types": "^2.1.35",
     "ms": "^2.0.0",
+    "multer": "^1.4.5-lts.1",
     "mysql": "^2.18.1",
     "mysql2": "^3.6.5",
     "negotiator": "^0.6.3",
